fix: editor scroll on overflowing content

--- a/apps/editor/components/wysiwyg-editor/editor.module.scss
+++ b/apps/editor/components/wysiwyg-editor/editor.module.scss
@@ -1,4 +1,6 @@
 .container {
+  overflow: scroll !important;
+
   ul {
     list-style: disc;
     list-style-position: inside;
